@@ -25,6 +25,7 @@ STELLA, CHANGES
 * ADDED: Testrun objects are now frozen after the run
 * ADDED: Testrun#userid, Testrun#runinfo
 * ADDED: Default Testrun status is "new"
+* ADDED: Testrun#run now accepts an options hash which is passed to Engine#run
 
 
 #### 0.8.2 (2010-03-05) ###############################
